fixed spacing/filled in tester data

--- a/app/components/articleCard.css
+++ b/app/components/articleCard.css
@@ -1,6 +1,5 @@
 .article-card {
   position: relative;
-  height: 100%;
 
   aspect-ratio: 333/338;
   display: flex;
@@ -8,26 +7,30 @@
 
   background-color: #fff;
   color: black;
-  margin: 20px;
-  padding: 0;
+  box-shadow: 0 4px 4px rgba(0,0,0,0.15);
 
-  box-shadow: 0 4px 4px rgba(0,0,0,0.15)
+  container-type: inline-size;
+}
+
+.article-card:hover {
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+
+.image-wrapper {
+  padding: 20px 20px 5px;
 }
 
 .image-box {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-
   width: 100%;
   aspect-ratio: 301 / 214;
   overflow: hidden;
+  border-radius: 15px;
 }
 
 .image {
   width: 100%;
   height: 100%;
-  border-radius: 15px;
   object-fit: cover;
   display: block;
 }
@@ -35,80 +38,68 @@
 .variant-0 {
   position: absolute;
   width: 35%;
-  height: auto;
-  top: 0%;
-  left: 0%;
-  transform: translateX(-25%) translateY(-30%);
+  transform: translate(-25%, -30%);
 }
 
 .variant-1 {
   position: absolute;
   width: 27px;
-  height: auto;
   rotate: -26.67deg;
-  top: 0%;
   left: 50%;
-  transform: translateX(-55%) translateY(-105%);
+  transform: translate(-55%, -105%);
 }
 
 .variant-2 {
   position: absolute;
   width: 37%;
   height: 8%;
-  top: 0%;
   left: 50%;
-  transform: translateX(-50%) translateY(-70%);
+  transform: translate(-50%, -70%);
 }
 
 .variant-3 {
   position: absolute;
   width: 93px;
-  height: auto;
-  top: 0%;
   left: 50%;
-  transform: translateX(-60%) translateY(-70%);
+  transform: translate(-60%, -70%);
 }
 
 .variant-4 {
   position: absolute;
   width: 39%;
   height: 8%;
-  top: 0%;
   left: 50%;
-  transform: translateX(-50%) translateY(-70%);
+  transform: translate(-50%, -70%);
 }
 
 .variant-5 {
   position: absolute;
   width: 93px;
-  height: auto;
-  top: 0%;
   left: 50%;
-  transform: translateX(-60%) translateY(-70%);
-}
-
-.article-card:hover {
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  transform: translate(-60%, -70%);
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-
+  flex: 1;
   padding: 10px 20px;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: clamp(22px, 5cqw, 38px);
   margin-left: 5px;
-  margin-top: 10px;
-  text-align: left;
+  line-height: 1.2;
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .author {
   font-family: "Cutive Mono", monospace;
-  font-size: 21px;
+  font-size: 18px;
   text-align: right;
   margin-top: auto;
 }
